<resources>
    <string name="app_name">Contacts</string>
    <string name="display_display_map_contact">Display display map contact</string>
    <string name="display_list_of_settings">Display list of settings</string>
    <string name="display_settings">Display settings</string>
    <string name="save_the_contact">Save the Contact</string>
    <string name="contact">Contact:</string>
    <string name="enter_name">Enter Name</string>
    <string name="address">Address:</string>
    <string name="enter_street_address">Enter Street Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zipcode">Zipcode</string>
    <string name="home_phone">Home Phone:</string>
    <string name="cell_phone">Cell Phone:</string>
    <string name="email_address">Email Address:</string>
    <string name="change">Change</string>
    <string name="birthday">Birthday</string>
    <string name="_01_01_1970">01/01/1970</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="home">Home</string>
    <string name="cell">Cell</string>
    <string name="email">Email</string>
    <string name="sort_contacts_by">Sort contacts by:</string>
    <string name="name">Name</string>
    <string name="sort_order">Sort Order:</string>
    <string name="descending">Descending</string>
    <string name="ascending">Ascending</string>
    <string name="select_relationship">Select Relationship</string>
    <string name="family">Family</string>
    <string name="friend">Friend</string>
    <string name="co_worker">Co-worker</string>
    <string name="acquaintance">Acquaintance</string>
    <string name="not_set">Not Set</string>
    <string name="relationship">Relationship:</string>
    <string name="select_relationship_button">Select Relationship</string>
</resources>