<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/select_relationship"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radioButtonFamily"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/family" />

        <RadioButton
            android:id="@+id/radioButtonFriend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friend" />

        <RadioButton
            android:id="@+id/radioButtonCoworker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/co_worker" />

        <RadioButton
            android:id="@+id/radioButtonAcquaintance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acquaintance" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <Button
            android:id="@+id/buttonCancel"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/dialog_button_color" />

        <Button
            android:id="@+id/buttonSave"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textColor="@color/dialog_button_color" />
    </LinearLayout>

</LinearLayout>
