<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactSettingActivity">

    <include
        android:id="@+id/include"
        layout="@layout/navbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/sort_contacts_by"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/sortByRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <RadioButton
            android:id="@+id/radioButtonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <RadioButton
            android:id="@+id/radioButtonCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/city" />

        <RadioButton
            android:id="@+id/radioButtonBirthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/birthday" />

    </RadioGroup>

    <TextView
        android:id="@+id/textViewSortOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_order"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="223dp" />

    <RadioGroup
        android:id="@+id/radioGroupSortOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSortOrder">

    <RadioButton
        android:id="@+id/radioDescending"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/descending"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="307dp" />

    <RadioButton
        android:id="@+id/radioAscending"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ascending"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="370dp" />

    </RadioGroup>



</androidx.constraintlayout.widget.ConstraintLayout>