<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/navbar"
    android:orientation="horizontal"
    android:background="@color/navbar_background_color">


        <ImageButton
            android:id="@+id/imageButtonMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/display_display_map_contact"
            android:backgroundTint="@color/button_color"
            android:src="@drawable/map" />

        <ImageButton
            android:id="@+id/imageButtonList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/button_color"
            android:contentDescription="@string/display_list_of_settings"
            android:src="@drawable/settings" />

        <ImageButton
            android:id="@+id/imageButtonSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/display_settings"

            android:backgroundTint="@color/button_color"

            android:src="@drawable/iconlist" />
</LinearLayout>